--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,20 +12,29 @@ body {
             }
         }
     
+     
+        
         .fadein { 
-            position:relative; 
-            height: 487px;
+            
+            position: relative;
+  width: 100%;
+            height: 500px;
+  padding: 0;
+  margin: 0;
             img { 
-                width: 100%;
-                position:absolute; 
-                left:0; 
-                top:0; 
+                
+                height: 500px;
+                float: left;
+                min-width: 100%;
+                position: absolute;
+                }
             }
         }
-    }
+            
+    
     
     main {
-        top: 400px;
+        
         
         div {
             section {
