--- a/scss/style.scss
+++ b/scss/style.scss
@@ -25,7 +25,7 @@ body {
                 
                 height: 500px;
                 float: left;
-                min-width: 100%;
+                width: 100%;
                 position: absolute;
                 }
             }
