--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,12 @@
 body {
+    hr {
+        border: 1px solid;
+    }
     
     header {
+        img {
+            width: 100%;
+        }
         nav {
             position: fixed !important;
             z-index: 100;
@@ -8,6 +14,7 @@ body {
             width: 100%;
             
             img {
+                width: auto;
                 height: 1.6em;
             }
         }
@@ -35,8 +42,15 @@ body {
     
     main {
         
-        
+        margin-top: 2em;
         div {
+            .col-lg-12 {
+                img {
+                    width: 50%;
+                    margin-left: 25%;
+                    margin-right: 25%
+                }
+            }
             section {
                 h3 {}
                 p{
@@ -57,8 +71,16 @@ body {
 
 footer {
     background-color: #333333;
+    margin-top: 2em;
     
     .container {
+        #pris {
+            p {
+                margin-left: 20%;
+                font-family: serif;
+                font-size: 0.8em;
+            }
+        }
         
     #krone {
         width: 20%;
@@ -91,14 +113,17 @@ footer {
         margin-bottom: 1.5em;
         
         
-        ul {
+        h4 {
             float: left;
             color: white;
-            li {
-                text-decoration: none;
+            
+            
+            }
+            p {
+                padding-left: 15px;
                 color: white;
             }
-        }
+        
     }
 }
     }
@@ -110,4 +135,8 @@ footer {
 #del2 {
     float: right;
     width: 50%;
+}
+
+nav ul li:hover > ul {
+		display: block;
 }
