--- a/css/style.css
+++ b/css/style.css
@@ -127,17 +127,17 @@ footer .container section p {
   width: 50%;
 }
 
-/* line 139, ../scss/style.scss */
-#del3 {
-  margin-top: 1em;
-}
-
-/* line 142, ../scss/style.scss */
+/* line 140, ../scss/style.scss */
 input {
-  margin-bottom: 1.5em;
+  margin-bottom: 1em;
 }
 
-/* line 146, ../scss/style.scss */
+/* line 143, ../scss/style.scss */
+textarea {
+  margin-bottom: 1em;
+}
+
+/* line 147, ../scss/style.scss */
 nav ul li:hover > ul {
   display: block;
 }
