--- a/scss/style.scss
+++ b/scss/style.scss
@@ -136,11 +136,12 @@ footer {
     float: right;
     width: 50%;
 }
-#del3 {
-    margin-top: 1em;
-}
+
 input {
-    margin-bottom: 1.5em;
+    margin-bottom: 1em;
+}
+textarea {
+    margin-bottom: 1em;
 }
 
 nav ul li:hover > ul {
