--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,9 +1,19 @@
+@font-face {
+    font-family: "Raleway";
+    src: url(https://fonts.googleapis.com/css?family=Raleway:400,600&subset=latin,latin-ext);
+}
+
+h1, h2, h3, h4, h5, h6, p, b, i {
+    font-family: Raleway;
+    color: black;
+}
 body {
     hr {
         border: 1px solid;
     }
     
     header {
+        
         img {
             width: 100%;
         }
@@ -12,8 +22,10 @@ body {
             z-index: 100;
             top: 0;
             width: 100%;
+            height: 3em;
             
             img {
+                margin-top: 0em;
                 width: auto;
                 height: 1.6em;
             }
@@ -21,24 +33,12 @@ body {
     
      
         
-        .fadein { 
-            
-            position: relative;
-  width: 100%;
-            height: 500px;
-  padding: 0;
-  margin: 0;
-            img { 
-                
-                height: 500px;
-                float: left;
-                width: 100%;
-                position: absolute;
-                }
-            }
+        
         }
             
-    
+    .mySlides {
+        top: 3em;
+    }
     
     main {
         
@@ -153,3 +153,4 @@ a {
         width: 30%;
     }
 }
+
