--- a/scss/style.scss
+++ b/scss/style.scss
@@ -144,10 +144,7 @@ textarea {
     margin-bottom: 1em;
 }
 
-nav ul li:hover > ul {
-		display: block;
-    background-color: whitesmoke;
-}
+
 
 a {
     img {
@@ -158,4 +155,23 @@ a {
 navbar {
     opacity: 1;
 }
+#myNavbar {
+    background-color: whitesmoke;
+    li {
+        
+    ul {
+        opacity: 1;
+        
+        li {
+            display: block;
+        }
+    }
+    }
+}
 
+@media screen and (min-width: 768px) {
+    
+nav ul li:hover > ul {
+		display: block;
+}
+}
