--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,23 @@
 @font-face {
-  font-family: "Raleway";
-  src: url(https://fonts.googleapis.com/css?family=Raleway:400,600&subset=latin,latin-ext);
+  font-family: "DroidSans";
+  src: url(https://fonts.googleapis.com/css?family=Droid+Sans);
 }
 
 /* line 6, ../scss/style.scss */
 h1, h2, h3, h4, h5, h6, p, b, i {
-  font-family: none;
+  font-family: Droid Sans;
   color: black;
 }
 
-/* line 12, ../scss/style.scss */
+/* line 11, ../scss/style.scss */
 body hr {
   border: 1px solid;
 }
-/* line 18, ../scss/style.scss */
+/* line 15, ../scss/style.scss */
 body header img {
   width: 100%;
 }
-/* line 21, ../scss/style.scss */
+/* line 18, ../scss/style.scss */
 body header nav {
   position: fixed !important;
   z-index: 100;
@@ -25,202 +25,203 @@ body header nav {
   width: 100%;
   height: 3em;
 }
-/* line 28, ../scss/style.scss */
+/* line 24, ../scss/style.scss */
 body header nav img {
   margin-top: 0em;
   width: auto;
   height: 1.6em;
 }
-/* line 35, ../scss/style.scss */
+/* line 30, ../scss/style.scss */
 body header .mySlides {
   top: 3em;
 }
-/* line 43, ../scss/style.scss */
+/* line 34, ../scss/style.scss */
 body main {
   margin-top: 2em;
 }
-/* line 48, ../scss/style.scss */
+/* line 38, ../scss/style.scss */
 body main div .col-lg-12 img {
   width: 50%;
   margin-left: 25%;
   margin-right: 25%;
 }
-/* line 56, ../scss/style.scss */
+/* line 46, ../scss/style.scss */
 body main div section p {
   color: darkgray;
 }
-/* line 60, ../scss/style.scss */
+/* line 50, ../scss/style.scss */
 body main div hr {
+  margin-top: 1em;
   margin-bottom: 1em;
 }
-/* line 63, ../scss/style.scss */
+/* line 54, ../scss/style.scss */
 body main div img {
   align-items: center;
   width: 92%;
 }
 
-/* line 72, ../scss/style.scss */
+/* line 61, ../scss/style.scss */
 footer {
   background-color: #333333;
   margin-top: 2em;
 }
-/* line 78, ../scss/style.scss */
+/* line 66, ../scss/style.scss */
 footer .container #pris p {
   margin-left: 20%;
-  font-family: serif;
+  font-family: Droid Sans;
   font-size: 0.8em;
 }
-/* line 85, ../scss/style.scss */
+/* line 72, ../scss/style.scss */
 footer .container #krone {
   width: 20%;
   float: left;
 }
-/* line 90, ../scss/style.scss */
+/* line 76, ../scss/style.scss */
 footer .container #midt {
   width: 100%;
 }
-/* line 94, ../scss/style.scss */
+/* line 79, ../scss/style.scss */
 footer .container #iso {
   width: 20%;
   float: left;
 }
-/* line 98, ../scss/style.scss */
+/* line 83, ../scss/style.scss */
 footer .container p {
   color: white;
 }
-/* line 101, ../scss/style.scss */
+/* line 86, ../scss/style.scss */
 footer .container span {
   color: white;
 }
-/* line 104, ../scss/style.scss */
+/* line 89, ../scss/style.scss */
 footer .container h5 {
   color: white;
 }
-/* line 107, ../scss/style.scss */
+/* line 92, ../scss/style.scss */
 footer .container h6 {
   font-size: 1.5em;
   color: white;
 }
-/* line 111, ../scss/style.scss */
+/* line 96, ../scss/style.scss */
 footer .container section {
   margin-top: 1.5em;
   margin-bottom: 1.5em;
 }
-/* line 116, ../scss/style.scss */
+/* line 99, ../scss/style.scss */
 footer .container section h4 {
   float: left;
   color: white;
 }
-/* line 122, ../scss/style.scss */
+/* line 103, ../scss/style.scss */
 footer .container section p {
   padding-left: 15px;
   color: white;
 }
 
-/* line 131, ../scss/style.scss */
+/* line 110, ../scss/style.scss */
 #del1 {
   float: left;
   width: 50%;
 }
 
-/* line 135, ../scss/style.scss */
+/* line 114, ../scss/style.scss */
 #del2 {
   float: right;
   width: 50%;
 }
 
-/* line 140, ../scss/style.scss */
+/* line 118, ../scss/style.scss */
 input {
   margin-bottom: 1em;
 }
 
-/* line 143, ../scss/style.scss */
+/* line 121, ../scss/style.scss */
 textarea {
   margin-bottom: 1em;
 }
 
-/* line 150, ../scss/style.scss */
+/* line 125, ../scss/style.scss */
 a img {
   width: 30%;
 }
 
-/* line 155, ../scss/style.scss */
+/* line 129, ../scss/style.scss */
 navbar {
   opacity: 1;
 }
 
-/* line 158, ../scss/style.scss */
+/* line 132, ../scss/style.scss */
 #myNavbar {
   background-color: whitesmoke;
 }
-/* line 162, ../scss/style.scss */
+/* line 135, ../scss/style.scss */
 #myNavbar li ul {
   opacity: 1;
 }
-/* line 165, ../scss/style.scss */
+/* line 137, ../scss/style.scss */
 #myNavbar li ul li {
   display: block;
 }
 
 @media screen and (min-width: 768px) {
-  /* line 174, ../scss/style.scss */
+  /* line 145, ../scss/style.scss */
   nav ul li:hover > ul {
     display: block;
   }
 }
 @media screen and (max-width: 991px) {
-  /* line 181, ../scss/style.scss */
+  /* line 152, ../scss/style.scss */
   nav .container {
     width: 100%;
   }
 }
-/* line 190, ../scss/style.scss */
+/* line 158, ../scss/style.scss */
 .w3-content {
   max-width: 980px;
   margin: auto;
 }
 
-/* line 191, ../scss/style.scss */
+/* line 159, ../scss/style.scss */
 .w3-section {
   margin-top: 16px!important;
   margin-bottom: 16px!important;
 }
 
-/* line 192, ../scss/style.scss */
+/* line 160, ../scss/style.scss */
 .w3-animate-fading {
   -webkit-animation: fading 10s infinite;
   animation: fading 10s infinite;
 }
 
 @-webkit-keyframes fading {
-  /* line 193, ../scss/style.scss */
+  /* line 161, ../scss/style.scss */
   0% {
     opacity: 0;
   }
 
-  /* line 193, ../scss/style.scss */
+  /* line 161, ../scss/style.scss */
   50% {
     opacity: 1;
   }
 
-  /* line 193, ../scss/style.scss */
+  /* line 161, ../scss/style.scss */
   100% {
     opacity: 0;
   }
 }
 
 @keyframes fading {
-  /* line 194, ../scss/style.scss */
+  /* line 162, ../scss/style.scss */
   0% {
     opacity: 0;
   }
 
-  /* line 194, ../scss/style.scss */
+  /* line 162, ../scss/style.scss */
   50% {
     opacity: 1;
   }
 
-  /* line 194, ../scss/style.scss */
+  /* line 162, ../scss/style.scss */
   100% {
     opacity: 0;
   }
